--- a/project/index.html
+++ b/project/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./public/css/reponsive.css">
 </head>
 <body>
+
     <header>
         <div class="container">
             <div class="header-inner d-flex align-items-center">
@@ -266,7 +267,17 @@
 
     <section class="banner">
         <div class="banner-group owl-carousel owl-theme">
-            <div class="banner-1 banner-item"></div>
+            <div class="banner-1 banner-item d-flex justify-content-between align-items-center">
+                <div class="content">
+                    <div class="banner-icon">
+                        <img src="./public/images/banner-logo-1.png" alt="slider">
+                    </div>
+                    <h1 class="banner-heading">Coffee Cup</h1>
+                    <h4 class="banner-subheading">Cà phê - Trà - Freeze</h4>
+
+                    <button class="btn">Khám phá Menu</button>
+                </div>
+            </div>
             <div class="banner-2 banner-item"></div>
             <div class="banner-3 banner-item"></div>
         </div>
