--- a/project/index.html
+++ b/project/index.html
@@ -206,7 +206,7 @@
                         <h1 class="banner-heading go-to-top" style="--order: 2">Coffee Cup</h1>
                         <h4 class="banner-subheading go-to-top" style="--order: 3">Cà phê - Trà - Bánh ngọt</h4>
 
-                        <button class="btn banner-btn go-to-top" style="--order: 4">Khám phá Menu</button>
+                        <a href="./page/menu.html" class="btn banner-btn go-to-top" style="--order: 4">Khám phá Menu</a>
                     </div>
                 </div>
                 <div class="banner-2 banner-item d-flex justify-content-between align-items-center">
@@ -249,7 +249,7 @@
                             <div class="item-content text-center">
                                 <h4>Cà phê</h4>
                                 <div class="intro-boder"></div>
-                                <a href="#">Xem thêm</a>
+                                <a href="./page/menu.html">Xem thêm</a>
                             </div>
                             <div class="item-image"></div>
                         </div>
@@ -259,7 +259,7 @@
                             <div class="item-content text-center">
                                 <h4>Đồ uống</h4>
                                 <div class="intro-boder"></div>
-                                <a href="#">Xem thêm</a>
+                                <a href="./page/menu.html">Xem thêm</a>
                             </div>
                             <div class="item-image"></div>
                         </div>
@@ -269,7 +269,7 @@
                             <div class="item-content text-center">
                                 <h4>Bánh ngọt</h4>
                                 <div class="intro-boder"></div>
-                                <a href="#">Xem thêm</a>
+                                <a href="./page/menu.html">Xem thêm</a>
                             </div>
                             <div class="item-image"></div>
                         </div>
