--- a/project/index.html
+++ b/project/index.html
@@ -24,7 +24,6 @@
 <body>
 
     <div class="wrapper">
-            
         <div class="overlay"></div>
         <!-- cart-side -->
         <div class="cart-side">
@@ -576,7 +575,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script type="module" src="./js/highlight-product.js"></script>
+    <script src="./js/highlight-product.js"></script>
     <script type="module" src="./js/main.js"></script>
 
 </body>
