--- a/project/public/index.html
+++ b/project/public/index.html
@@ -33,7 +33,7 @@
             <div class="content">
                 <h3 class ='text-center'>Giỏ hàng trống</h3>
                 <div class="text-center">
-                    <a href='./page/menu.html' class='btn'>Tiếp tục mua hàng</a>
+                    <a href='../page/menu.html' class='btn'>Tiếp tục mua hàng</a>
                 </div>
             </div>
             
