--- a/project/public/index.html
+++ b/project/public/index.html
@@ -178,7 +178,7 @@
                         <h1 class="banner-heading go-to-top" style="--order: 2">Coffee Cup</h1>
                         <h4 class="banner-subheading go-to-top" style="--order: 3">Cà phê - Trà - Freeze</h4>
 
-                        <a href="./menu.html" class="btn white banner-btn go-to-top" style="--order: 4">Khám phá Menu</a>
+                        <a href="../page/menu.html" class="btn white banner-btn go-to-top" style="--order: 4">Khám phá Menu</a>
                     </div>
                 </div>
                 <div class="banner-2 banner-item d-flex justify-content-between align-items-center">
@@ -189,7 +189,7 @@
                         <h1 class="banner-heading go-to-top" style="--order: 2">Coffee Cup</h1>
                         <h4 class="banner-subheading go-to-top" style="--order: 3">Khuyến mãi đầu xuân Nhâm Dần lên tới 20%</h4>
 
-                        <button class="btn white banner-btn go-to-top" style="--order: 4">Đăng ký ngay</button>
+                        <a href="../page/menu.html" class="btn white banner-btn go-to-top" style="--order: 4">Đăng ký ngay</a>
                     </div>
                 </div>
                 <div class="banner-3 banner-item d-flex justify-content-between align-items-center">
@@ -200,7 +200,7 @@
                         <h1 class="banner-heading go-to-top" style="--order: 2">Coffee Cup</h1>
                         <h4 class="banner-subheading go-to-top" style="--order: 3">Đặt hàng dễ dàng hơn với ứng dụng di dộng</h4>
 
-                        <button class="btn white banner-btn go-to-top" style="--order: 4">Tải app ngay</button>
+                        <a href="../page/menu.html"class="btn white banner-btn go-to-top" style="--order: 4">Tải app ngay</a>
                     </div>
                 </div>
             </div>
