--- a/project/public/index.html
+++ b/project/public/index.html
@@ -334,7 +334,7 @@
                     <img src="./images/line-under-heading.png" alt="line">
                 </div>
                 
-                <div class="wrap">
+                <div class="wrap mt-3">
                     <div class="tintuc-carousel owl-carousel owl-theme d-flex flex-wrap">
                         <a href="./page/tintuc-1.html"class="card">
                             <div class="scard-image image-1"></div>
