--- a/project/public/index.html
+++ b/project/public/index.html
@@ -18,8 +18,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/reponsive.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/reponsive.css">
 </head>
 <body>
 
@@ -178,7 +178,7 @@
                         <h1 class="banner-heading go-to-top" style="--order: 2">Coffee Cup</h1>
                         <h4 class="banner-subheading go-to-top" style="--order: 3">Cà phê - Trà - Freeze</h4>
 
-                        <a href="../page/menu.html" class="btn white banner-btn go-to-top" style="--order: 4">Khám phá Menu</a>
+                        <a href="./page/menu.html" class="btn white banner-btn go-to-top" style="--order: 4">Khám phá Menu</a>
                     </div>
                 </div>
                 <div class="banner-2 banner-item d-flex justify-content-between align-items-center">
@@ -189,9 +189,10 @@
                         <h1 class="banner-heading go-to-top" style="--order: 2">Coffee Cup</h1>
                         <h4 class="banner-subheading go-to-top" style="--order: 3">Khuyến mãi đầu xuân Nhâm Dần lên tới 20%</h4>
 
-                        <a href="../page/menu.html" class="btn white banner-btn go-to-top" style="--order: 4">Đăng ký ngay</a>
+                        <a href="./page/menu.html" class="btn white banner-btn go-to-top" style="--order: 4">Đăng ký ngay</a>
                     </div>
                 </div>
+                
                 <div class="banner-3 banner-item d-flex justify-content-between align-items-center">
                     <div class="content">
                         <div class="banner-icon go-to-top" style="--order: 1">
@@ -200,7 +201,7 @@
                         <h1 class="banner-heading go-to-top" style="--order: 2">Coffee Cup</h1>
                         <h4 class="banner-subheading go-to-top" style="--order: 3">Đặt hàng dễ dàng hơn với ứng dụng di dộng</h4>
 
-                        <a href="../page/menu.html"class="btn white banner-btn go-to-top" style="--order: 4">Tải app ngay</a>
+                        <a href="./page/menu.html"class="btn white banner-btn go-to-top" style="--order: 4">Tải app ngay</a>
                     </div>
                 </div>
             </div>
@@ -467,6 +468,30 @@
                 animateIn: 'animate__flip',
             });
 
+            $(".highlight-product").owlCarousel({
+                items:4,
+                margin:16,
+                autoplayHoverPause: true,
+                loop:true,
+                autoplay:true,
+                dots: true,
+                nav: true,
+                autoplayTimeout:5000,
+                responsive:{
+                    0:{
+                        items:1
+                    },
+                    510:{
+                        items:2
+                    },
+                    1000:{
+                        items:3
+                    },
+                    1200:{
+                        items:4
+                    }
+                }
+            });
 
             $(".tintuc-carousel").owlCarousel({
                 items:3,
@@ -498,7 +523,7 @@
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script type="module" src="./js/highlight-product.js"></script>
+    <script src="./js/highlight-product.js"></script>
     <script type="module" src="./js/main.js"></script>
 
 </body>
