--- a/react-3/BMI/index.html
+++ b/react-3/BMI/index.html
@@ -22,7 +22,7 @@
       }
       .input-group input {
         max-width: 120px;
-        padding: 4px 8px;
+        padding: 8px;
         border-radius: 2px;
         border: 1px solid #ccc;
         outline: none;
@@ -31,6 +31,17 @@
 
       button {
         margin-top: 16px;
+        background: linear-gradient(90deg, #d9780d, #c30707);
+        padding: 8px 19px;
+        border: none;
+
+        color: #fff;
+        border-radius: 4px;
+        font-size: 16px;
+        font-weight: bold;
+
+        box-shadow: 0px 4px 4px 0 rgba(0, 0, 0, 0.25);
+        cursor: pointer;
       }
     </style>
   </head>
