--- a/react-4/btvn-todolist/index.html
+++ b/react-4/btvn-todolist/index.html
@@ -80,6 +80,8 @@
         display: flex;
         align-items: center;
         padding-left: 8px;
+
+        margin: 4px 0;
       }
 
       .todo-content {
