--- a/mobile/index.html
+++ b/mobile/index.html
@@ -39,7 +39,7 @@
       </section>
 
       <section class="intro item">
-        <img src="/assets/images/image2.jpg" alt="moto g stylus" />
+        <img src="./assets/images/image2.jpg" alt="moto g stylus" />
         <div class="intro-content d-flex justify-content-center flex-column">
           <h3 class="heading">pointed precision</h3>
           <p class="description mt-4">
